{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 78,
  "lineage": "f060837b-70d9-1e96-3034-549d572ef1f9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1foralbasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:992382492065:instance/i-06ea93eea4971b284",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06ea93eea4971b284",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-alb-demo-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-006f00c2981bd5d72",
            "private_dns": "ip-12-0-7-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.7.250",
            "public_ip": "44.221.28.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-061771ff1641e132f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0465b2e16276f4760",
            "tags": {
              "Name": "instance1foralbasg"
            },
            "tags_all": {
              "Name": "instance1foralbasg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00cc4ebc1f0cca06a",
              "sg-0c70135b6036c9f0b"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_a",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2foralbasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:992382492065:instance/i-0be6dc27dee8120ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be6dc27dee8120ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-alb-demo-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa99133518e9a917",
            "private_dns": "ip-12-0-9-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.9.83",
            "public_ip": "52.72.22.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0174581969b4f4c4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c72f9683b62a8832",
            "tags": {
              "Name": "instance2foralbasg"
            },
            "tags_all": {
              "Name": "instance2foralbasg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00cc4ebc1f0cca06a",
              "sg-0c70135b6036c9f0b"
            ]
          },
          "dependencies": [
            "aws_subnet.subnet_b",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gatewayforalbasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:internet-gateway/igw-0f711d5e54dc8d125",
            "id": "igw-0f711d5e54dc8d125",
            "owner_id": "992382492065",
            "tags": {
              "Name": "gatewayforalbasg"
            },
            "tags_all": {
              "Name": "gatewayforalbasg"
            },
            "vpc_id": "vpc-076748484ab89f549"
          },
          "dependencies": [
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "albasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382492065:loadbalancer/app/loadbalancerforalbasg/9ee9ec09dee0a521",
            "arn_suffix": "app/loadbalancerforalbasg/9ee9ec09dee0a521",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "loadbalancerforalbasg-1093352387.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382492065:loadbalancer/app/loadbalancerforalbasg/9ee9ec09dee0a521",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "loadbalancerforalbasg",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00cc4ebc1f0cca06a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0465b2e16276f4760"
              },
              {
                "subnet_id": "subnet-0c72f9683b62a8832"
              }
            ],
            "subnets": [
              "subnet-0465b2e16276f4760",
              "subnet-0c72f9683b62a8832"
            ],
            "tags": {
              "InternetFacing": "true"
            },
            "tags_all": {
              "InternetFacing": "true"
            },
            "vpc_id": "vpc-076748484ab89f549",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.albasg_sg",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382492065:listener/app/loadbalancerforalbasg/9ee9ec09dee0a521/65c5e28aa9392073",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382492065:listener/app/loadbalancerforalbasg/9ee9ec09dee0a521/65c5e28aa9392073",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:992382492065:loadbalancer/app/loadbalancerforalbasg/9ee9ec09dee0a521",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.albasg",
            "aws_lb_target_group.tgroupforalbasg",
            "aws_security_group.albasg_sg",
            "aws_subnet.subnet_a",
            "aws_subnet.subnet_b",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tgroupforalbasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3",
            "arn_suffix": "targetgroup/tf-group-lb-tg/fef4553e1ed994f3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:992382492065:loadbalancer/app/loadbalancerforalbasg/9ee9ec09dee0a521"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-group-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-076748484ab89f549"
          },
          "dependencies": [
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance1_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3-20240224170558795000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3",
            "target_id": "i-06ea93eea4971b284"
          },
          "dependencies": [
            "aws_instance.instance1foralbasg",
            "aws_lb_target_group.tgroupforalbasg",
            "aws_subnet.subnet_a",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance2_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3-20240224170559014000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3",
            "target_id": "i-0be6dc27dee8120ed"
          },
          "dependencies": [
            "aws_instance.instance2foralbasg",
            "aws_lb_target_group.tgroupforalbasg",
            "aws_subnet.subnet_b",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "targetgroupattachalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3-20240224170559122900000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3",
            "target_id": "i-0be6dc27dee8120ed"
          },
          "dependencies": [
            "aws_instance.instance2foralbasg",
            "aws_lb_target_group.tgroupforalbasg",
            "aws_subnet.subnet_b",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tgroupattachalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3-20240224170559058000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:992382492065:targetgroup/tf-group-lb-tg/fef4553e1ed994f3",
            "target_id": "i-06ea93eea4971b284"
          },
          "dependencies": [
            "aws_instance.instance1foralbasg",
            "aws_lb_target_group.tgroupforalbasg",
            "aws_subnet.subnet_a",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetableforalbasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:route-table/rtb-07419eb2918cd5e56",
            "id": "rtb-07419eb2918cd5e56",
            "owner_id": "992382492065",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f711d5e54dc8d125",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f711d5e54dc8d125",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "routetableforalbasg"
            },
            "tags_all": {
              "Name": "routetableforalbasg"
            },
            "timeouts": null,
            "vpc_id": "vpc-076748484ab89f549"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gatewayforalbasg",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subneta_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bf6c263e603da13",
            "route_table_id": "rtb-07419eb2918cd5e56",
            "subnet_id": "subnet-0465b2e16276f4760"
          },
          "dependencies": [
            "aws_internet_gateway.gatewayforalbasg",
            "aws_route_table.routetableforalbasg",
            "aws_subnet.subnet_a",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnetb_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa0e38937a926bbf",
            "route_table_id": "rtb-07419eb2918cd5e56",
            "subnet_id": "subnet-0c72f9683b62a8832"
          },
          "dependencies": [
            "aws_internet_gateway.gatewayforalbasg",
            "aws_route_table.routetableforalbasg",
            "aws_subnet.subnet_b",
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "albasg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:security-group/sg-00cc4ebc1f0cca06a",
            "description": "Security group for ALB",
            "egress": [],
            "id": "sg-00cc4ebc1f0cca06a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "albasg_securitygroup",
            "name_prefix": "",
            "owner_id": "992382492065",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-076748484ab89f549"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:subnet/subnet-0465b2e16276f4760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "12.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0465b2e16276f4760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382492065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-076748484ab89f549"
          },
          "dependencies": [
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:subnet/subnet-0c72f9683b62a8832",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "12.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c72f9683b62a8832",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382492065",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-076748484ab89f549"
          },
          "dependencies": [
            "aws_vpc.vpcforalbasg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpcforalbasg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382492065:vpc/vpc-076748484ab89f549",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-0edf54fd3d78c8f95",
            "default_route_table_id": "rtb-0a468f717c9577d6a",
            "default_security_group_id": "sg-0c70135b6036c9f0b",
            "dhcp_options_id": "dopt-076539d1f01f98755",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-076748484ab89f549",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a468f717c9577d6a",
            "owner_id": "992382492065",
            "tags": {
              "Name": "vpcforalbasg"
            },
            "tags_all": {
              "Name": "vpcforalbasg"
            }
          }
        }
      ]
    }
  ]
}